k8s/eventshuttle.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eventshuttle
  namespace: eventshuttle
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: eventshuttle.binarydream.fi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eventshuttle
                port:
                  number: 3000
  tls:
    - secretName: eventshuttle-tls
      hosts:
        - eventshuttle.binarydream.fi
